--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -33,8 +33,8 @@ definitions:
         name: 'Build distribution package'
         script:
           - git submodule update --recursive --init
-          - python3 -m pip install pygit2
-          - python3 -u scripts/dist.py --path-to-build build-dist --build-number $BITBUCKET_BUILD_NUMBER
+          - python3 -m pip install pygit2 boto3
+          - python3 -u scripts/dist.py --path-to-build build-dist --build-number $BITBUCKET_BUILD_NUMBER --upload --spaces-key $SPACES_KEY --spaces-secret $SPACES_SECRET
         artifacts:
           - build-dist/*.zip
         depends-on:
